resolved spacing issue w/flex container

--- a/src/css/News.css
+++ b/src/css/News.css
@@ -6,7 +6,6 @@
   text-align: left;
   max-width: 100%;
   display: flex;
-  justify-content: space-between;
 }
 
 .facebook-post h2:hover {
